--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,14 +9,14 @@ spring:
 #    password: root
 #    url: jdbc:postgresql://localhost:5432/ShortenedUrl
 #    username: shrturl
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.PostgreSQLDialect
-#        format_sql: true
-#    show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
 
   mail:
     host: smtp.gmail.com
